@@ -1,5 +1,9 @@
 2005-03-24  Tom Tromey  <tromey@redhat.com>
 
+	* tree.cc (visit_switch): Annotate case label expression.
+
+2005-03-24  Tom Tromey  <tromey@redhat.com>
+
 	* tree.hh (tree_generator::binary_operator): Updated.
 	* tree.cc (binary_operator): Added result_type argument.
 	(visit_comparison): Updated.
